creusot/tests/should_fail/prusti/deny_zombies/var.stderr
error: `T` cannot be moved from `'post` to `'pre` since it didn't exist at that point
 --> var.rs:5:20
  |
5 | #[ensures(old(x == result))]
  |                    ^^^^^^

error: aborting due to 1 previous error

